Bug 883568 - Call UpdateOverflow() in the scroll frame base class to actually update the overflow areas.  r=roc